--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="pub-info">forthcoming <br>
 					<i>Ancient Philosophy</i></div>
 				<div class="pub-title">
-	The “Belonging to a Kind” Reading of the Eudemian Ergon Argument
+	The “Belonging to a Kind” Reading of the Eudemian <i>Ergon</i> Argument
 				</div>
 			</div>
 			<div class="pub">
@@ -31,7 +31,7 @@
 				<p class="pub-title">
 				<a href="https://doi.org/10.1163/15685284-12341954">
 				Self-Knowledge in the Eye-Soul Analogy
-				of the Alcibiades</a>
+					of the <i>Alcibiades</i></a>
 				</p>
 			</div>
 		</div>
