Linked to Belonging to a Kind pdf

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 				<div class="pub-info">forthcoming <br>
 					<i>Ancient Philosophy</i></div>
 				<div class="pub-title">
-	The “Belonging to a Kind” Reading of the Eudemian <i>Ergon</i> Argument
+				<a href="BelongingToAKindRevised.pdf">
+					The “Belonging to a Kind” Reading of the Eudemian <i>Ergon</i> Argument </a>
 				</div>
 			</div>
 			<div class="pub">
