Fixed link typo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="pub-info">forthcoming <br>
 					<i>Ancient Philosophy</i></div>
 				<div class="pub-title">
-				<a href="BelongingToAKindRevised.pdf">
+				<a href="BelongingToaKindRevised.pdf">
 					The “Belonging to a Kind” Reading of the Eudemian <i>Ergon</i> Argument </a>
 				</div>
 			</div>
