added R&R to website

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 					Vitae</a></div>
 			<div class="section"></div>
 			<div class="pub">
+				<div class="pub-info">R&R <br>
+					<i>Phronesis</i></div>
+				<div class="pub-title">
+				<a href="BestIstheEnd.pdf">
+					The Best Is the <i>Telos</i>: An Argument in <i>Eudemian Ethics</i> I.8 </a>
+				</div>
+			</div>
+			<div class="pub">
 				<div class="pub-info">forthcoming <br>
 					<i>Ancient Philosophy</i></div>
 				<div class="pub-title">
