corrected spelling of Phronesis

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="pub">
 				<span class="pub-info">2019
-					<br> <i>Phroenesis</i></span>
+					<br> <i>Phronesis</i></span>
 				<p class="pub-title">
 				<a href="https://doi.org/10.1163/15685284-12341954">
 				Self-Knowledge in the Eye-Soul Analogy
