--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 				</div>
 			</div>
 			<div class="pub">
-				<span class="pub-info">2019
+				<div class="pub-info">2019
 					<br> <i>Phronesis</i></span>
-				<p class="pub-title">
+				<div class="pub-title">
 				<a href="https://doi.org/10.1163/15685284-12341954">
 				Self-Knowledge in the Eye-Soul Analogy
 					of the <i>Alcibiades</i></a>
