Fixed closing tag bug

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 			</div>
 			<div class="pub">
 				<div class="pub-info">2019
-					<br> <i>Phronesis</i></span>
+					<br> <i>Phronesis</i></div>
 				<div class="pub-title">
 				<a href="https://doi.org/10.1163/15685284-12341954">
 				Self-Knowledge in the Eye-Soul Analogy
 					of the <i>Alcibiades</i></a>
-				</p>
+				</div>
 			</div>
 		</div>
 	</body>
