--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					Vitae</a></div>
 			<div class="section"></div>
 			<div class="pub">
-				<div class="pub-info">R&R <br>
+				<div class="pub-info">forthcoming <br>
 					<i>Phronesis</i></div>
 				<div class="pub-title">
 				<a href="BestIstheEndR&R.pdf">
