--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="description">
 				daniel.ferguson@yale.edu
 			</div>
-			<div class="cv"><a href="CVOct21-Ferguson.pdf">Curriculum
+			<div class="cv"><a href="CVNov21-Ferguson.pdf">Curriculum
 					Vitae</a></div>
 			<div class="section"></div>
 			<div class="pub">
