--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <body>
                 <div class="main">
 			<h1 class="name">Daniel Ferguson</h1>
-			<div class="description">Lecturer at Yale working on ancient ethics 
+			<div class="description">VAP at Northwestern working on ancient ethics 
 			</div>
 			<div class="description">
-				daniel.ferguson@yale.edu
+				danielferguson374@gmail.com
 			</div>
 			<div class="cv"><a href="CVNov21-Ferguson.pdf">Curriculum
 					Vitae</a></div>
@@ -30,7 +30,7 @@
 				<div class="pub-info">forthcoming <br>
 					<i>Ancient Philosophy</i></div>
 				<div class="pub-title">
-				<a href="BelongingToaKindRevised.pdf">
+				<a href="https://doi.org/10.5840/ancientphil202242232">
 					The “Belonging to a Kind” Reading of the Eudemian <i>Ergon</i> Argument </a>
 				</div>
 			</div>
