--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				</div>
 			</div>
 			<div class="pub">
-				<div class="pub-info">forthcoming <br>
+				<div class="pub-info">2022 <br>
 					<i>Ancient Philosophy</i></div>
 				<div class="pub-title">
 				<a href="https://doi.org/10.5840/ancientphil202242232">
