--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 					Vitae</a></div>
 			<div class="section"></div>
 			<div class="pub">
-				<div class="pub-info">forthcoming <br>
+				<div class="pub-info">2022 <br>
 					<i>Phronesis</i></div>
 				<div class="pub-title">
-				<a href="BestIstheEndRevised.pdf">
+				<a href="https://doi.org/10.1163/15685284-bja10057">
 					The Best Is the <i>Telos</i>: An Argument in <i>Eudemian Ethics</i> I.8 </a>
 				</div>
 			</div>
