--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 			<div class="description">VAP at Northwestern working on ancient ethics 
 			</div>
 			<div class="description">
-				danielferguson374@gmail.com
+				daniel.ferguson@northwestern.edu
 			</div>
-			<div class="cv"><a href="CVNov21-Ferguson.pdf">Curriculum
+			<div class="cv"><a href="CVAug2022-Ferguson.pdf">Curriculum
 					Vitae</a></div>
 			<div class="section"></div>
 			<div class="pub">
