--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <body>
                 <div class="main">
 			<h1 class="name">Daniel Ferguson</h1>
-			<div class="description">VAP at Northwestern working on ancient ethics 
+			<div class="description">Newton International Fellow at KCL working on ancient ethics 
 			</div>
 			<div class="description">
-				daniel.ferguson@northwestern.edu
+				daniel.ferguson@kcl.ac.uk
 			</div>
-			<div class="cv"><a href="CVAug2022-Ferguson.pdf">Curriculum
+			<div class="cv"><a href="CVAp2023-Ferguson.pdf">Curriculum
 					Vitae</a></div>
 			<div class="section"></div>
 			<div class="pub">
