Add book review section

--- a/index.html
+++ b/index.html
@@ -43,6 +43,33 @@
 					of the <i>Alcibiades</i></a>
 				</div>
 			</div>
+			<div class="section"><br></div>
+				<div class="pub">
+					<div class="pub-info">
+						2024
+						<br>
+						<i>Mind</i>
+						<br>
+						(with Hans Reichenbach)
+					  </div>
+					<div class="pub-title">
+					<a href="https://google.com">
+						Review of Aristotle of Stagira's <i>Prior Analytics</i> </a> 						
+					</div>
+				</div>
+				<div class="pub">
+					<div class="pub-info">
+						2023
+						<br>
+						<i>Analysis</i>
+						<br>
+					</div>
+					<div class="pub-title">
+					<a href="https://google.com">
+						Review of I. Kant's <i>Critique of Pure Reason</i> </a> 						
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
