--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					  </div>
 					<div class="pub-title">
 					<a href="https://google.com">
-						Review of Aristotle of Stagira's <i>Prior Analytics</i> </a> 						
+						Review of Aristotle of Stagira's <i>Posterior Analytics</i> </a> 						
 					</div>
 				</div>
 				<div class="pub">
