--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<br>
 						<i>Mind</i>
 						<br>
-						(with Hans Reichenbach)
+						(with Rans Heichenbach)
 					  </div>
 					<div class="pub-title">
 					<a href="https://google.com">
