--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
 					<div class="pub-info">
 						2024
 						<br>
-						<i>Mind</i>
+						<i>BJHP</i>
 						<br>
-						(with Rans Heichenbach)
+						(with Joachim Aufderheide)
 					  </div>
 					<div class="pub-title">
-					<a href="https://google.com">
-						Review of Aristotle of Stagira's <i>Posterior Analytics</i> </a> 						
+					<a href="https://doi.org/10.1080/09608788.2024.2404441">
+						Review of Bryan C. Reece's <i>Aristotle on Happiness, Virtue, and Wisdom</i> </a> 						
 					</div>
 				</div>
 				<div class="pub">
 					<div class="pub-info">
 						2023
 						<br>
-						<i>Analysis</i>
+						<i>Ancient Philosophy</i>
 						<br>
 					</div>
 					<div class="pub-title">
-					<a href="https://google.com">
-						Review of I. Kant's <i>Critique of Pure Reason</i> </a> 						
+					<a href="https://doi.org/10.5840/ancientphil202343236">
+						Review of Marc Gasser-Wingate's <i>Aristotle's Empiricism</i> </a> 						
 					</div>
 				</div>
 			</div>
