--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="section"><br></div>
 				<div class="pub">
 					<div class="pub-info">
-						2024
+						forth.
 						<br>
 						<i>BJHP</i>
 						<br>
