--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="description">
 				daniel.ferguson@kcl.ac.uk
 			</div>
-			<div class="cv"><a href="CVOct24-Ferguson.pdf">Curriculum
+			<div class="cv"><a href="CVJan25-Ferguson.pdf">Curriculum
 					Vitae</a></div>
 			<div class="section"></div>
 			<div class="pub">
