--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <body>
                 <div class="main">
 			<h1 class="name">Daniel Ferguson</h1>
-			<div class="description">Newton International Fellow at KCL working on ancient ethics 
+			<div class="description">Assistant Professor at Bilkent working on ancient ethics 
 			</div>
 			<div class="description">
-				daniel.ferguson@kcl.ac.uk
+				danielferguson@bilkent.edu.tr
 			</div>
-			<div class="cv"><a href="CVJan25-Ferguson.pdf">Curriculum
+			<div class="cv"><a href="CVOct25-Ferguson.pdf">Curriculum
 					Vitae</a></div>
 			<div class="section"></div>
 			<div class="pub">
